--- a/MyChronicle.Application/MyChronicle.Application.csproj
+++ b/MyChronicle.Application/MyChronicle.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MyChronicle.Domain\MyChronicle.Domain.csproj" />
     <ProjectReference Include="..\MyChronicle.Infrastructure\MyChronicle.Infrastructure.csproj" />
   </ItemGroup>
