add docker connection

--- a/MyChronicle.API/appsettings.json
+++ b/MyChronicle.API/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=myChronicle;User Id=root;Password=root;"
+    "DefaultConnection": "Server=localhost;Database=myChronicle;User Id=root;Password=root;",
+    "DockerConnection": "Server=mysql;Database=MyChronicleDatabase;User=root;Password=1234;"
   }
 }
