fix: database creds

--- a/MyChronicle.API/appsettings.json
+++ b/MyChronicle.API/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=myChronicle;User Id=root;Password=root;",
-    "DockerConnection": "Server=mysql;Database=MyChronicleDatabase;User=root;Password=1234;"
+    "DockerConnection": "Server=mysql;Database=MyChronicleDatabase;User Id=user;Password=1234;"
   }
 }
