--- a/MyChronicle.API/appsettings.json
+++ b/MyChronicle.API/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=myChronicle;User Id=root;Password=root;",
-    "DockerConnection": "Server=mysql;Database=MyChronicleDatabase;User Id=user;Password=1234;"
-  }
+  "AllowedHosts": "*"
 }
