--- a/MyChronicle.API/appsettings.json
+++ b/MyChronicle.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=myChronicle;User Id=root;Password=root;"
+    "DefaultConnection": "Server=localhost;Database=myChronicle;User Id=root;Password=;"
   }
 }
